syntax = "proto3";
package b9lab.cosmosacademyexercisesimple.cosmosacademyexercisesimple;

import "gogoproto/gogo.proto";
import "cosmosacademyexercisesimple/params.proto";
import "cosmosacademyexercisesimple/world_params_2.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/b9lab/cosmos-academy-exercise-simple/x/cosmosacademyexercisesimple/types";

// GenesisState defines the cosmosacademyexercisesimple module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated WorldParams2 worldParams2List = 2 [(gogoproto.nullable) = false];
  uint64 worldParams2Count = 3;
  // this line is used by starport scaffolding # genesis/proto/state
}
